AMP Roadshow: added registration links for Beijing/Shanghai, fixed formatting on mobile

--- a/assets/sass/pages/amp-roadshow.scss
+++ b/assets/sass/pages/amp-roadshow.scss
@@ -186,6 +186,87 @@
             margin-top: 2em;
             text-align: center;
             font-style: italic;
+            @include max-screen(650px) {
+              margin-top: 4em;
+            }
+          }
+
+          &.city-upcoming {
+            .bubble {
+              opacity: 0;
+              pointer-events: none;
+              transform: translateY(20px);
+              transition: opacity 0.3s ease-out,
+                          transform 0.3s ease-out;
+                          top: -40px;
+            }
+            &:hover  .bubble {
+              opacity: 1;
+              transform: translateY(0px);
+            }
+            .dot {
+              .circle {
+                background: #4c4c4c;
+              }
+              .ringring {
+                animation: none;
+              }
+            }
+          }
+
+          .bubble {
+            background: #fff;
+            box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
+            position: absolute;
+            top: -76px;
+            left: 8px;
+            z-index: 1;
+            font-size: 14px;
+            @include max-screen(650px) {
+              font-size: 12px;
+              position: static;
+            }
+
+            .date {
+              font-weight: 500;
+              text-transform: uppercase;
+              background: #07a5ff;
+              color: #fff;
+              padding: 0.2em 0.8em;
+            }
+
+            .flex {
+              display: flex;
+              align-items: center;
+              padding: 0.2em 0.8em;
+              @include max-screen(650px) {
+                padding: 0.2em 0.4em;
+              }
+            }
+
+            h4 {
+              margin: 0;
+              font-size: 14px;
+              font-weight: 500;
+              margin-right: 0.7em;
+              text-transform: uppercase;
+              white-space: nowrap;
+              @include max-screen(650px) {
+                margin-right: 0.4em;
+                font-size: 12px;
+              }
+            }
+
+            a {
+              padding-left: 0.7em;
+              border-left: 1px solid #eee;
+              display: block;
+              white-space: nowrap;
+              @include max-screen(650px) {
+                font-size: 12px;
+                padding-left: 0.4em;
+              }
+            }
           }
 
           .world {
@@ -194,69 +275,9 @@
             .city {
               position: absolute;
 
-              &.city-upcoming {
-                .bubble {
-                  opacity: 0;
-                  pointer-events: none;
-                  transform: translateY(20px);
-                  transition: opacity 0.3s ease-out,
-                              transform 0.3s ease-out;
-                              top: -40px;
-                }
-                &:hover  .bubble {
-                  opacity: 1;
-                  transform: translateY(0px);
-                }
-                .dot {
-                  .circle {
-                    background: #4c4c4c;
-                  }
-                  .ringring {
-                    animation: none;
-                  }
-                }
-              }
-
               .bubble {
-                background: #fff;
-                box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
-                position: absolute;
-                top: -76px;
                 @include max-screen(650px) {
-                  top: -70px;
-                }
-                left: 8px;
-                z-index: 1;
-                font-size: 14px;
-
-                .date {
-                  font-weight: 500;
-                  text-transform: uppercase;
-                  background: #07a5ff;
-                  color: #fff;
-                  padding: 0.2em 0.8em;
-                }
-
-                .flex {
-                  display: flex;
-                  align-items: center;
-                  padding: 0.2em 0.8em;
-                }
-
-                h4 {
-                  margin: 0;
-                  font-size: 14px;
-                  font-weight: 500;
-                  margin-right: 10px;
-                  text-transform: uppercase;
-                  white-space: nowrap;
-                }
-
-                a {
-                  padding-left: 10px;
-                  border-left: 1px solid #eee;
-                  display: block;
-                  white-space: nowrap;
+                  display: none;
                 }
               }
 
@@ -300,22 +321,11 @@
                 left: auto;
                 right: 6px;
               }
-              @include max-screen(650px) {
-                .bubble {
-                  top: 26px;
-                  right: 40px;
-                }
-              }
             }
 
             .city-jakarta {
               top: 64%;
               left: 78%;
-              @include max-screen(650px) {
-                .bubble {
-                  left: -60px;
-                }
-              }
             }
 
             .city-sydney {
@@ -323,11 +333,6 @@
               left: 88%;
               .bubble {
                 top: 6px;
-              }
-              @include max-screen(650px) {
-                .bubble {
-                  left: -80px;
-                }
               }
             }
 
@@ -363,6 +368,11 @@
             .city-beijing {
               top: 29%;
               left: 78%;
+              .bubble {
+                top: 12px;
+                left: auto;
+                right: 6px;
+              }
             }
 
             .city-shanghai {
@@ -389,6 +399,20 @@
                 display: inline-block;
                 margin: 0 0.4em;
               }
+            }
+          }
+
+          ul.tablet-down {
+
+            display: flex;
+            flex-wrap: wrap;
+            padding-right: 0;
+            margin-right: -1em;
+            margin-left: -1em;
+
+            li {
+              margin: 0.4em 0;
+              flex: 1 1 50%;
             }
           }
 
